--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
   "scripts": {
     "build": "rm -rf dist && tsc -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node --swc ./src/index.ts",
+    "start": "ts-node --swc ./dist/index.js",
     "dev": "nodemon --watch './src/**/*.ts' --exec 'ts-node --swc' ./src/index.ts"
   },
   "author": "Vinicius Sacramento",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^8.4.1",
     "@prisma/client": "^5.4.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "fastify": "^4.24.3"
   },
   "devDependencies": {
     "@swc/core": "^1.3.94",
     "@swc/helpers": "^0.5.3",
     "@types/cors": "^2.8.15",
-    "@types/express": "^4.17.20",
     "@types/node": "^20.8.7",
     "nodemon": "^3.0.1",
     "prisma": "^5.4.2",
